stop text from wrapping

--- a/client/src/components/One.css
+++ b/client/src/components/One.css
@@ -37,6 +37,7 @@
   padding: 10px 0;
   height: 180px;
   font-size: 16px;
+  white-space: nowrap;
 }
 
 .one-edit{
